/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.10.2/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

javafx {
    version = "23"
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.media']
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    implementation 'org.openjfx:javafx-controls:21'
    implementation 'org.openjfx:javafx-fxml:21'
    implementation 'org.openjfx:javafx-media:21' // <-- Add media support

    // Use JUnit Jupiter for testing.
    testImplementation libs.junit.jupiter
    testImplementation 'com.github.tomakehurst:wiremock-jre8:2.35.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // This dependency is used by the application.
    implementation libs.guava

    // MySQL JDBC
    implementation group: 'com.mysql', name: 'mysql-connector-j', version: '9.2.0'

    // Other dependencies
    implementation 'com.braintreepayments.gateway:braintree-java:3.40.0'
    implementation 'io.github.cdimascio:dotenv-java:3.0.0'
    implementation 'org.slf4j:slf4j-simple:2.0.17'
    implementation 'org.json:json:20231013'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'org.example.Main'
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}

run {
    doFirst {
        jvmArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', 'javafx.controls,javafx.fxml,javafx.media'
        ]
    }
}
